# Neptune

./: .env  .eslintrc.js  .gitignore  .gitmodules  Dockerfile  Dockerfile.old  README.md  docker-compose.yml  neptune.code-workspace  package.json  setup.sh  start.sh  vue.config.js  webpack.config.js
backend/: Dockerfile.job-runner  README.md  pyproject.toml
backend/api/controllers/: authentication_controller.py  user_controller.py  workspace_controller.py
backend/api/models/: __init__.py  api_response.py  compiler_inputs.py  file_body2.py  file_body3.py  file_fs_body.py  file_properties_update_input.py  file_response.py  job_input.py  job_response.py  login_input.py  register_input.py  update_password_input.py  user_info_input.py  user_response.py  workspace_input.py
backend/api/swagger/: swagger.yaml
backend/api/test/: test_authentication_controller.py  test_compile_controller.py  test_user_controller.py  test_workspace_controller.py
backend/core/: __main__.py  authentication.py  parameters.py  ziphelper.py
backend/core/db/: user.py  workspace.py
backend/core/resources/: signup.py  workspace.py
backend/job-runner-test/: README.md  pyproject.toml  send_test2.py  test.py  test.sh
backend/job-runner-test/tests/: test_job_runner.py
backend/job_runner/: filesystem.py  server.py
backend/static/: index.html  socket.html
backend/static/css/: app.165e13f8.css  chunk-04b9bfff.9c918763.css  chunk-08042682.0af3634d.css  chunk-15ebc532.4c4ed10a.css  chunk-16de195a.93e8c71b.css  chunk-1af07eb7.b8723bd4.css  chunk-22bdd612.63b72a07.css  chunk-36bfde96.092c6729.css  chunk-4a793393.d4f5a52f.css  chunk-504d47fc.1da759ee.css  chunk-51712f6a.7689d6a8.css  chunk-51ae22cc.66d71497.css  chunk-61f1ed15.e41ef6c2.css  chunk-6d555496.39a21f97.css  chunk-856da858.beb16884.css  chunk-86f28aaa.df804574.css  chunk-9d21594c.21fe44c6.css  chunk-c01aad94.d679e716.css  chunk-fad186aa.76723d6c.css  chunk-vendors.ce096ec4.css
backend/static/js/: app.063c8c7f.js  app.063c8c7f.js.map  app.5875ba1d.js  app.5875ba1d.js.map  chunk-0162d498.c5e000d8.js  chunk-0162d498.c5e000d8.js.map  chunk-0162d498.ce866c03.js  chunk-0162d498.ce866c03.js.map  chunk-04b9bfff.aedaa30a.js  chunk-04b9bfff.aedaa30a.js.map  chunk-04b9bfff.b1daf571.js  chunk-04b9bfff.b1daf571.js.map  chunk-08042682.2a51aa36.js  chunk-08042682.2a51aa36.js.map  chunk-08042682.f49a1bcb.js  chunk-08042682.f49a1bcb.js.map  chunk-0ae1a18c.028d8c85.js  chunk-0ae1a18c.028d8c85.js.map  chunk-0ae1a18c.2dc096b1.js  chunk-0ae1a18c.2dc096b1.js.map  chunk-0e1074fb.11589362.js  chunk-0e1074fb.11589362.js.map  chunk-0e1074fb.bd5952e9.js  chunk-0e1074fb.bd5952e9.js.map  chunk-15ebc532.61c7b5c3.js  (+173 more)
flask-reimplementation/: Dockerfile.job-runner  README.md  neptune.openapi.yaml  pyproject.toml  server.py
flask-reimplementation/api/: __main__.py  util.py  utils.py
flask-reimplementation/app/: filesystem.py  parameters.py  server.py
flask-reimplementation/core/: s3filesystem.py  server.py  tasks.py  workspace.py
flask-reimplementation/examples/: example.lfr
flask-reimplementation/fluigi-cloud/: __main__.py
flask-reimplementation/fluigi_cloud/: __main__.py  encoder.py
flask-reimplementation/job-runner/: Dockerfile
flask-reimplementation/job_runner/: tasks.py
job-runner/: Dockerfile  README.md  pyproject.toml  send_test.py  simple.py  test.py  test.sh
job-runner/job_runner/: filesystem.py  server.py  setting.py  tasks.py
(+172 files in other folders)
