[tool.poetry]
name = "neptune_backend"
version = "0.1.0"
description = ""
authors = ["Radhakrishna Sanka <rkrishnasanka@gmail.com>"]
license = "BSD-3-Clause"
include = [
    "fluigi_cloud/**/*.py",
    "app/**/*.py",
]
packages = [
    { include = "core" },
    { include = "api" },
    { include = "job_runner" }
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
boto3 = "^1.24.54"
mongoengine = "^0.24.2"
Flask-RESTful = "^0.3.9"
Flask-Bcrypt = "^1.0.1"
Flask-JWT-Extended = "^4.4.4"
flask-mongoengine = "^1.0.0"
Flask-Cors = "^3.0.10"
flask_socketio = "^5.3.2"
redis = "^4.3.4"
flask-apispec = "^0.11.4"
connexion = {extras = ["swagger-ui"], version = "^2.14.2"}
python-dateutil = "^2.8.2"
swagger-ui-bundle = "^0.0.9"
simple-websocket = "^0.9.0"
celery = {extras = ["redis"], version = "^5.2.7"}
celerybeat-mongo = "^0.2.0"
asyncio = "^3.4.3"
"socket.io-emitter" = "^0.1.5"
boto-s3-router = "^0.0.3"


[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
pylint = "^2.14.5"
Sphinx = "^5.1.1"
isort = "^5.10.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
