[tool.poetry]
name = "Fluigi-Cloud"
version = "0.1.0"
description = ""
authors = ["Radhakrishna Sanka <rkrishnasanka@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
Flask-SocketIO = "^5.2.0"
Flask = "^2.2.2"
boto3 = "^1.24.54"
mongoengine = "^0.24.2"
Flask-RESTful = "^0.3.9"
Flask-Bcrypt = "^1.0.1"
Flask-JWT-Extended = "^4.4.4"
flask-mongoengine = "^1.0.0"
celery = "^5.2.7"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
pylint = "^2.14.5"
Sphinx = "^5.1.1"
isort = "^5.10.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
