[tool.poetry]
name = "job_runner"
version = "0.1.0"
description = ""
authors = ["Radhakrishna Sanka <rkrishnasanka@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
redis = "^4.3.4"
celery = {extras = ["redis"], version = "^5.2.7"}
celerybeat-mongo = "^0.2.0"
mongoengine = "^0.24.2"
asyncio = "^3.4.3"
"socket.io-emitter" = "^0.1.5"
boto3 = "^1.24.50"
boto-s3-router = "^0.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-dotenv = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
